--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -206,6 +206,7 @@ svg[aria-hidden=true],
 
     margin-left: auto;
     margin-right: auto;
+    height: 65%;
 
     .page-progress-indicator {
       margin-right: $spacing;
@@ -384,7 +385,7 @@ svg[aria-hidden=true],
       border: 1px solid $bookmark-white;
       text-align: center;
       margin: 5px;
-      padding: 0px;
+      padding: 0;
     }
 
     > label {
