lower back arrow slightly

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -257,6 +257,10 @@ svg[aria-hidden=true],
   &:focus {
     box-shadow: none;
   }
+
+  .fa-chevron-left {
+    vertical-align: middle;
+  }
 }
 
 .cf-pdf-spaced-buttons {
