--- a/app/assets/stylesheets/_hearings.scss
+++ b/app/assets/stylesheets/_hearings.scss
@@ -1,6 +1,9 @@
 @import 'uswds/lib/addons/font-stacks';
 @import 'uswds/core/variables';
 
+// This may become a common variable
+$color-saving: #777;
+
 // Using 1.765em alot, should create variable if this setting sticks
 
 // FOR USE WITH APPLICATION ALT TEMPLATE AND HEARINGS
@@ -40,6 +43,12 @@ body {
       background-repeat: no-repeat;
       background-position: center left;
     }
+  }
+
+  .cf-app-segment,
+  .cf-app-segment--alt {
+    margin: 0;
+    border: none;
   }
 }
 
@@ -148,6 +157,7 @@ body {
   }
 }
 
+.cf-hearings,
 .cf-hearings-schedule {
   padding: 1.765em;
 
@@ -164,6 +174,142 @@ body {
 
     td:nth-child(2) {
       text-transform: none;
+    }
+  }
+
+  .cf-title-meta-right {
+    .cf-push-right {
+      text-align: right;
+      padding: .75em 0;
+    }
+  }
+
+  .cf-hearings-docket {
+
+    // TODO: see if this can become a part of the general style
+    .Select-arrow-zone {
+      background-position: center center;
+      background-size: .75em;
+    }
+
+    // TODO: see if this can become a part of the general style
+    .Select-arrow {
+      width: 1.7em;
+    }
+
+    tbody {
+      border-bottom: 1px solid $color-gray-lighter;
+    }
+
+    td {
+      vertical-align: top;
+      margin: 0;
+      border: none;
+      padding: .75em;
+    }
+
+    th {
+      vertical-align: middle;
+      background: none;
+      border: none;
+      border-bottom: 1px solid $color-gray-lighter;
+      margin: 0;
+      padding: .75em;
+
+      &:last-child {
+        padding-right: 0;
+      }
+
+      // TODO: get rule into a SaveData component
+      > span {
+        display: inline-block;
+        width: 25%;
+
+        &:last-child {
+          width: 75%;
+          text-align: right;
+        }
+      }
+
+      // TODO: get rule into a SaveData component
+      .saving {
+        font-style: italic;
+        font-size: 90%;
+        color: $color-saving;
+      }
+    }
+
+    .cf-hearings-docket-date {
+      padding-left: 0;
+      width: 18%;
+
+      > span {
+        display: inline-block;
+        vertical-align: top;
+
+        &:first-child {
+          font-weight: bold;
+          text-align: right;
+          margin-right: .5em;
+          width: 1.5em;
+        }
+      }
+    }
+
+    .cf-hearings-docket-appellant {
+      width: 20%;
+
+      b {
+        display: block;
+        text-transform: uppercase;
+      }
+    }
+
+    .cf-hearings-docket-notes {
+      padding-top: 0;
+
+      label {
+        display: inline-block;
+        vertical-align: top;
+        text-align: right;
+        width: 15%;
+      }
+
+      > .text {
+        display: inline-block;
+        vertical-align: top;
+        width: 85%;
+      }
+
+      textarea {
+        height: 4em;
+        resize: vertical;
+      }
+    }
+
+    .cf-hearings-docket-actions {
+      padding: .75em .32em 0;
+      width: 45%;
+      text-align: center;
+      background-color: $color-gray-lightest;
+
+      .cf-form-dropdown {
+        text-align: left;
+        display: inline-block;
+        width: 33%;
+        margin: 0;
+        padding: 0 .32em;
+      }
+    }
+  }
+
+  .transcriptRequired {
+    position: relative;
+
+    > div {
+      position: absolute;
+      top: 0;
+      right: .5em;
     }
   }
 }
