finally create a modal with a basic table yay

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -482,3 +482,8 @@ input[type="search"].cf-search-input-with-close {
 .cf-pdf-center-text {
   text-align: center;
 }
+
+.cf-keyboard-shortcuts {
+  bottom: 0;
+  position: absolute;
+}
