--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -486,4 +486,5 @@ input[type="search"].cf-search-input-with-close {
 .cf-keyboard-shortcuts {
   bottom: 0;
   position: absolute;
+  margin-left: 50px;
 }
