edit pdfkeyboardinfo and change height of modal

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -488,3 +488,7 @@ input[type="search"].cf-search-input-with-close {
   position: absolute;
   margin-left: 50px;
 }
+
+div[id=cf-keyboard-modal] {
+  height: 580px;
+}
