--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -202,12 +202,30 @@ svg[aria-hidden=true],
 
   .cf-pdf-buttons-center {
     $spacing: 25px;
-
     margin-left: auto;
     margin-right: auto;
 
     .page-progress-indicator {
       margin-right: $spacing;
+    }
+
+    .page-progress-indicator-input {
+      > input {
+        width: 48px;
+        height: 22px;
+        display: inline-block;
+        color: $color-white;
+        background-color: $color-gray;
+        border: 1px solid $color-white;
+        text-align: center;
+        margin: 5px;
+        padding: 0;
+      }
+
+      > label {
+        display: inline-block;
+      }
+
     }
 
     .doc-list-progress-indicator {
