--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -503,13 +503,19 @@ input[type="search"].cf-search-input-with-close {
 
 .cf-keyboard-shortcuts {
   bottom: 0;
-  position: absolute;
-  margin-left: 70px;
+  position: relative;
+  margin-left: 40px;
+  height: 50px;
 
   .cf-btn-link {
     &:hover {
       background-color: $caseflow-background;
     }
+  }
+
+  svg {
+    vertical-align: bottom;
+    margin-right: 4px;
   }
 }
 
@@ -517,11 +523,6 @@ input[type="search"].cf-search-input-with-close {
   height: 580px;
   overflow: auto;
   display: block;
-
-  svg {
-    vertical-align: middle;
-    margin-right: 5px;
-  }
 }
 
 .cf-modal-scroll {
