--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -523,6 +523,18 @@ input[type="search"].cf-search-input-with-close {
   height: 580px;
   overflow: auto;
   display: block;
+
+  // Candidate for commons
+  table {
+    margin: 0 0 2em 0;
+  }
+
+  // Candidate for commons - all modals should have dark gray x
+  .cf-icon-close {
+    path {
+      fill: $color-gray-dark;
+    }
+  }
 }
 
 .cf-modal-scroll {
