--- a/app/assets/stylesheets/_hearings.scss
+++ b/app/assets/stylesheets/_hearings.scss
@@ -2,7 +2,8 @@
 @import 'uswds/core/variables';
 
 // This may become a common variable
-$color-saving: #777;
+$color-hearings-saving: #777;
+$color-dropdown-shadow: rgba(0, 0, 0, 0.75);
 
 // Using 1.765em alot, should create variable if this setting sticks
 
@@ -197,6 +198,20 @@ body {
       width: 1.7em;
     }
 
+    // TODO: see if this can become a part of the general style
+    .Select-menu-outer {
+      border: 1px solid $color-gray-medium;
+      border-top: none;
+      min-height: auto;
+      box-shadow: 0 2px 4px 0 $color-dropdown-shadow;
+    }
+
+    // TODO: see if this can become a part of the general style
+    .is-searchable.is-open > .Select-control {
+      box-shadow: 0 1px 4px 0 $color-dropdown-shadow;
+      border: 1px solid $color-gray-medium;
+    }
+
     tbody {
       border-bottom: 1px solid $color-gray-lighter;
     }
@@ -235,7 +250,7 @@ body {
       .saving {
         font-style: italic;
         font-size: 90%;
-        color: $color-saving;
+        color: $color-hearings-saving;
       }
     }
 
@@ -273,12 +288,13 @@ body {
         vertical-align: top;
         text-align: right;
         width: 15%;
-      }
 
-      > .text {
-        display: inline-block;
-        vertical-align: top;
-        width: 85%;
+        + div {
+          display: inline-block;
+          vertical-align: top;
+          padding-left: .5em;
+          width: 85%;
+        }
       }
 
       textarea {
