--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -526,7 +526,7 @@ input[type="search"].cf-search-input-with-close {
 
   // Candidate for commons
   table {
-    margin: 0 0 2em 0;
+    margin: 0 0 2em;
   }
 
   // Candidate for commons - all modals should have dark gray x
