--- a/app/views/test/setup/index.html.erb
+++ b/app/views/test/setup/index.html.erb
@@ -11,6 +11,13 @@
       <p><a href="<%= url_for controller: '/functions', action: 'index'%>">Change Functions</a></p>
       <p><%= link_to "Clear Data", test_setup_delete_test_data_path %></p>
       <p><%= link_to "Create Tasks", admin_establish_claim_path %></p>
+      <h2>Feature Toggle!</h2>
+      <%= form_for @feature_name, url: test_setup_toggle_features_path, method: "POST",
+          html: { id: "toggle-features-form", class: "cf-form" },
+	      builder: CaseflowFormBuilder do |f| %>
+        <%= f.text_field :feature_name, label: "FEATURE", question_name: "feature_name" %>
+        <button type="submit" class="cf-submit">Toggle!</button>
+      <% end %>
     </div>
 
     <div class="usa-width-one-half">
