--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -503,3 +503,50 @@ input[type="search"].cf-search-input-with-close {
 .cf-pdf-center-text {
   text-align: center;
 }
+
+.cf-keyboard-shortcuts {
+  bottom: 0;
+  position: relative;
+  margin-left: 40px;
+  height: 50px;
+
+  .cf-btn-link {
+    &:hover {
+      background-color: $caseflow-background;
+    }
+  }
+
+  svg {
+    vertical-align: bottom;
+    margin-right: 4px;
+  }
+}
+
+[id=cf-keyboard-modal] {
+  height: 580px;
+  overflow: auto;
+  display: block;
+
+  // Candidate for commons
+  table {
+    margin: 0 0 2em;
+  }
+
+  // Candidate for commons - all modals should have dark gray x
+  .cf-icon-close {
+    path {
+      fill: $color-gray-dark;
+    }
+  }
+}
+
+.cf-modal-scroll {
+  .cf-keyboard-modal-scroll {
+    max-height: 370px;
+    overflow: auto;
+  }
+}
+
+.cf-table-borderless + .cf-keyboard-modal-table thead th {
+  width: 23%;
+}
