Changed stylesheet rule for hover color

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -409,3 +409,9 @@ select {
 .cf-title-meta-right {
   line-height: 3em;
 }
+
+.cf-btn-link{
+  &:hover {
+    background-color: transparent;
+  }
+}
