give more margin to right button

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -195,7 +195,7 @@ svg[aria-hidden=true],
 
   .cf-pdf-footer-buttons-right {
     width: $footer-button-width;
-    margin-right: $outer-margin;
+    margin-right: 18px;
   }
 
   .cf-pdf-footer-buttons-left {
