--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -83,6 +83,13 @@ $tag-backgrond-color: #d6d7d9;
   .cf-document-list-header-row tr {
     display: block;
 
+    th > button {
+      display: flex;
+      background-color: $color-white;
+      color: $color-gray-dark;
+      padding: 0;
+    }
+
     th > div {
       display: flex;
     }
