--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -88,6 +88,8 @@ $tag-backgrond-color: #d6d7d9;
       background-color: $color-white;
       color: $color-gray-dark;
       padding: 0;
+      margin: 0;
+      line-height: normal;
     }
 
     th > div {
