Show updated Claims Missing Decisions in VBMS
Connects #2168

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -415,4 +415,18 @@ select {
 
 .cf-title-meta-right {
   line-height: 3em;
+
+  * {
+    vertical-align: middle;
+  }
+
+  .meta {
+    font-size: 1.118em;
+
+    .value {
+      font-size: 1.263em;
+      position: relative;
+      top: -.1em;
+    }
+  }
 }
