Reader | Reposition "Open Menu" Button (#2377)
* move open menu button and add margins

* fix css

* adding more padding

* decrease padding

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -140,7 +140,7 @@ svg[aria-hidden=true],
   position: absolute;
   z-index: 15;
   opacity: 1;
-  padding: 15px 24px 15px 15px;
+  padding: 15px 23px 15px 15px;
 
   .category-icons-and-doc-type {
     display: flex;
@@ -452,7 +452,7 @@ svg[aria-hidden=true],
 
 .cf-pdf-open-menu {
   flex: 0 0 auto;
-  margin-left: 5px;
+  margin: 0 17px;
 }
 
 .cf-pdf-doc-type-button-container {
