--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -477,7 +477,7 @@ svg[aria-hidden=true],
 
   // We will manually draw the cursor with the annotation icon.
   * {
-    cursor: none;
+    cursor: none !important;
   }
 }
 
