refactoring all existing banner alert messages to use the new component

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -444,3 +444,8 @@ select {
 .vbms-id {
   color: $color-gray-light;
 }
+
+// candidate for commons
+.usa-alert-heading {
+  font-family: "Source Sans Pro"
+}
