rake lint fixes

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -447,5 +447,5 @@ select {
 
 // candidate for commons
 .usa-alert-heading {
-  font-family: "Source Sans Pro"
+  font-family: 'Source Sans Pro';
 }
