--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -444,3 +444,47 @@ select {
 .vbms-id {
   color: $color-gray-light;
 }
+
+// candidate for commons
+.cf-loading-symbol {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: block;
+
+  &.on-pill {
+    margin-left: .35em;
+  }
+
+  span {
+    display: block;
+  }
+
+  > span {
+    &:first-child {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    &:last-child {
+      text-align: center;
+    }
+  }
+
+  .back {
+    width: 100%;
+    height: 100%;
+    @include animation(spin 5s linear infinite);
+  }
+
+  .front {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    @include animation(backwardspin 5s linear infinite);
+  }
+}
+
