Added style for the component.

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -444,3 +444,21 @@ select {
 .vbms-id {
   color: $color-gray-light;
 }
+
+.usa-banner {
+  background-color: $color-gold-lightest;
+  height: 50px;
+}
+
+.usa-banner-inner {
+  padding-top: 13px;
+}
+
+.banner-icon {
+  display:inline-block;
+  vertical-align: text-top;
+}
+
+.banner-text {
+  padding-left: 10px;
+}
