--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,6 +125,7 @@
         <% end %>
       </div>
     </nav>
+    <%= react_component("CaseflowBanner", props: {}) %>
   </header>
 
   <% if content_for?(:full_page_content) %>
