--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -450,6 +450,11 @@ select {
   color: $color-gray-light;
 }
 
+// candidate for commons
+.usa-alert-heading {
+  font-family: 'Source Sans Pro';
+}
+
 .cf-work-assignments {
   td {
     &:first-child {
