--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -467,7 +467,9 @@ select {
 }
 
 //candidate for commons
-.usa-accordion-bordered, .usa-accordion, .usa-accordion-bordered-outline {
+.usa-accordion-bordered,
+.usa-accordion,
+.usa-accordion-bordered-outline {
   margin-bottom: 40px;
 }
 
