Fix hearings schedule
Connects #2283

--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -1,12 +1,9 @@
-<%# react_component goes here %>
-
 <% content_for :page_title do page_title('Schedule') end %>
-
-<% content_for :right_actions do %><%= print_link %><% end %>
 
 <%= react_component("Hearings", props: {
   hearings: {
     veteran_law_judge: current_user.to_hash,
-    dockets: current_user_dockets.map(&:to_hash)
+    docketsLoaded: false,
+    dockets: {}
   }
 }) %>
