--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -6,8 +6,9 @@ $tag-backgrond-color: #d6d7d9;
 
 .section--document-list {
   mark {
-    background: $color-gold-lightest
+    background: $color-gold-lightest;
   }
+
   .section--no-search-results {
     .cf-msg-screen-text {
       display: none;
