--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
 -->
 
   <!-- Script for Google Analytics (GA). Currently setup for production only. -->
-  <% if Rails.deploy_env?(:prod) %>
+  <% if Rails.env.production? && Rails.deploy_env?(:prod) %>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
