Add Appeal#appellant and clean up DocketsContainer

--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -2,8 +2,6 @@
 
 <%= react_component("Hearings", props: {
   hearings: {
-    veteran_law_judge: current_user.to_hash,
-    docketsLoaded: false,
-    dockets: {}
+    veteran_law_judge: current_user.to_hash
   }
 }) %>
