styleguide component enhancement | Label spacings (#1989)

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -487,3 +487,11 @@ select {
   padding-left: 1.6em;
   white-space: nowrap;
 }
+
+.cf-form-textinput,
+.cf-form-textarea,
+.cf-form-dropdown {
+  label {
+    margin-bottom: 8px;
+  }
+}
