--- a/app/views/layouts/application_alt.html.erb
+++ b/app/views/layouts/application_alt.html.erb
@@ -68,8 +68,8 @@
 -->
 
   <!-- Script for Google Analytics (GA). Currently setup for production only. -->
-  <% if Rails.env.production? && Rails.deploy_env?(:prod) %>
-    <script>
+  <script>
+    <% if Rails.env.production? && Rails.deploy_env?(:prod) %>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -80,9 +80,19 @@
       ga('require', 'linker');
       ga('linker:autoLink', ['<%= ga_alternate_domain %>'] );
 
-      ga('send', 'pageview', '<%= current_ga_path %>');
-    </script>
-  <% end %>
+      window.analyticsPageView = function(page) {
+        ga('send', 'pageview', page);
+      }
+
+    <% else %>
+      window.analyticsPageView = function(page) {
+        console.log("Google Analytics Page View: " + page)
+      }
+
+    <% end %>
+
+    analyticsPageView('<%= current_ga_path %>');
+  </script>
 
   <%= favicon_link_tag %>
 
