--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -96,6 +96,10 @@ svg[aria-hidden=true],
     visibility: hidden;
   }
 
+  .usa-accordion-content {
+    background-color: $caseflow-background;
+  }
+
   .usa-alert {
     margin-top: 15px;
   }
@@ -115,8 +119,8 @@ svg[aria-hidden=true],
 }
 
 .cf-comment-wrapper {
-  padding: 0 30px;
-  width: 380px;
+  padding: 0 30px 0 0;
+  width: 350px;
   $comment-wrapper-vertical-margin: 15px;
   margin-top: $comment-wrapper-vertical-margin;
   overflow-y: scroll;
