--- a/app/views/layouts/application_alt.html.erb
+++ b/app/views/layouts/application_alt.html.erb
@@ -76,9 +76,7 @@
       })(window,document,'script', '<%= Rails.configuration.google_analytics_host %>','ga');
 
       // Allow both caseflow domains to send analytics data
-      ga('create', '<%= Rails.configuration.google_analytics_account %>', 'auto', {'allowLinker': true});
-      ga('require', 'linker');
-      ga('linker:autoLink', ['<%= ga_alternate_domain %>'] );
+      ga('create', '<%= Rails.configuration.google_analytics_account %>', 'auto');
 
       window.analyticsPageView = function(page) {
         ga('send', 'pageview', page);
@@ -86,14 +84,17 @@
 
     <% else %>
       window.analyticsPageView = function(page) {
-        console.log("Google Analytics Page View: " + page)
+        console.log(
+          "Google Analytics Page View\n" +
+          "path: " + page + "\n" +
+          "title: " + document.title
+        )
       }
 
     <% end %>
 
     analyticsPageView('<%= current_ga_path %>');
   </script>
-
   <%= favicon_link_tag %>
 
 </head>
