readd keyboard shortcuts test and fix css again

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -504,7 +504,7 @@ input[type="search"].cf-search-input-with-close {
 .cf-keyboard-shortcuts {
   bottom: 0;
   position: relative;
-  margin-left: 35px;
+  text-align: center;
   height: 50px;
 
   .cf-btn-link {
