Styleguide component enhancement | Label spacings (#1989) Changed margin-bottom for Text input, Text area

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -518,3 +518,10 @@ select {
     margin-bottom: 8px;
   }
 }
+
+.cf-form-checkboxes,
+.cf-form-radio-option {
+  label {
+    margin-bottom: 20px;
+  }
+}
