--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -163,7 +163,8 @@ $tag-backgrond-color: #d6d7d9;
       button {
         padding: $dropdown-interior-padding;
         padding-bottom: 0;
-        width: 100%;
+        margin-top: 14px;
+        margin-left: 14px;
       }
 
       .cf-clear-filter-button-wrapper {
@@ -188,11 +189,12 @@ $tag-backgrond-color: #d6d7d9;
       .cf-category-selector {
         display: flex;
         align-items: flex-start;
-        margin: .5em;
+        margin-right: .5em;
 
         .cf-form-checkboxes {
-          margin-top: 0;
+          margin-top: 14px;
           margin-bottom: 0;
+          margin-left: 14px;
         }
       }
     }
@@ -204,20 +206,20 @@ $tag-backgrond-color: #d6d7d9;
 
       li {
         margin-bottom: 0;
-
+        
         @include hover;
 
         .cf-form-checkboxes {
-          margin-top: 0;
+          margin-top: 14px;
           margin-bottom: 0;
-
+          margin-left: 14px;
+        
           label {
             padding: $dropdown-interior-padding;
             margin-bottom: 0;
 
             &::before {
               margin-top: $dropdown-interior-padding;
-              margin-left: $dropdown-interior-padding;
             }
 
             .cf-category-selector {
@@ -230,6 +232,9 @@ $tag-backgrond-color: #d6d7d9;
 
       li:last-child .cf-form-checkboxes {
         margin-bottom: 0;
+        margin-top: 14px;
+
+
 
         .cf-category-selector {
           margin-bottom: 0;
@@ -284,6 +289,7 @@ $tag-backgrond-color: #d6d7d9;
       .cf-category-name {
         line-height: 1;
         padding-left: 7px;
+
       }
     }
   }
