add 2 new props from react-collapse

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -323,6 +323,10 @@ svg[aria-hidden=true],
   margin-top: 0;
 }
 
+.cf-sidebar-accordion {
+  overflow: scroll;
+}
+
 .cf-add-comment-button {
   margin-top: -15px;
 }
