--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,7 +125,7 @@
         <% end %>
       </div>
     </nav>
-    <%= react_component("CaseflowBanner", props: {}) %>
+    <%= react_component("PerformanceDegradationBanner", props: {}) %>
   </header>
 
   <% if content_for?(:full_page_content) %>
