--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -519,3 +519,12 @@ select {
   }
 }
 
+.cf-primary-default.button_wrapper {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+ }
+
+.cf-secondary-default.usa-button-outline {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
