--- a/app/views/layouts/application_alt.html.erb
+++ b/app/views/layouts/application_alt.html.erb
@@ -73,8 +73,8 @@
 -->
 
   <!-- Script for Google Analytics (GA). Currently setup for production only. -->
-  <% if Rails.env.production? && Rails.deploy_env?(:prod) %>
-    <script>
+  <script>
+    <% if Rails.env.production? && Rails.deploy_env?(:prod) %>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -87,14 +87,19 @@
         ga('send', 'pageview', page);
       }
 
-      window.analyticsEvent = function(category, action, label) {
-        ga('send', 'event', category, action, label)
+    <% else %>
+      window.analyticsPageView = function(page) {
+        console.log(
+          "Google Analytics Page View\n" +
+          "path: " + page + "\n" +
+          "title: " + document.title
+        )
       }
 
-      analyticsPageView('<%= current_ga_path %>');
-    </script>
-  <% end %>
+    <% end %>
 
+    analyticsPageView('<%= current_ga_path %>');
+  </script>
   <%= favicon_link_tag %>
 
 </head>
