--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -420,6 +420,10 @@ svg[aria-hidden=true],
     float: left;
   }
 
+  .highlighted {
+    filter: drop-shadow( 0px 0px 5px $color-primary-alt);
+  }
+
   li:not(:first-child) {
     padding-left: 10px;
   }
