--- a/app/views/queue/index.html.erb
+++ b/app/views/queue/index.html.erb
@@ -19,7 +19,8 @@
     featureToggles: {
       schedule_veteran_virtual_hearing: FeatureToggle.enabled?(:schedule_veteran_virtual_hearing, user: current_user),
       special_issues_revamp: FeatureToggle.enabled?(:special_issues_revamp, user: current_user),
-      overtime_revamp: FeatureToggle.enabled?(:overtime_revamp, user: current_user)
+      overtime_revamp: FeatureToggle.enabled?(:overtime_revamp, user: current_user),
+      editNodDate: FeatureToggle.enabled?(:edit_nod_date, user: current_user)
     }
   }) %>
 <% end %>
