--- a/client/app/styles/react/_select-dropdown.scss
+++ b/client/app/styles/react/_select-dropdown.scss
@@ -13,6 +13,7 @@ $cf-select-text-color: #323a45;
     border-spacing: 0;
     color: $cf-select-text-color;
     cursor: default;
+    max-width: 46rem;
 
     &--is-disabled {
       background-color: $cf-select-disabled-bg-color;
