--- a/app/views/queue/index.html.erb
+++ b/app/views/queue/index.html.erb
@@ -21,6 +21,9 @@
       special_issues_revamp: FeatureToggle.enabled?(:special_issues_revamp, user: current_user),
       overtime_revamp: FeatureToggle.enabled?(:overtime_revamp, user: current_user),
       cavc_remand: FeatureToggle.enabled?(:cavc_remand, user: current_user),
+      mdr_cavc_remand: FeatureToggle.enabled?(:mdr_cavc_remand, user: current_user),
+      reversal_cavc_remand: FeatureToggle.enabled?(:reversal_cavc_remand, user: current_user),
+      dismissal_cavc_remand: FeatureToggle.enabled?(:dismissal_cavc_remand, user: current_user),
       editNodDate: FeatureToggle.enabled?(:edit_nod_date, user: current_user)
     }
   }) %>
