Removed black background

--- a/client/app/styles/reader/_reviewer.scss
+++ b/client/app/styles/reader/_reviewer.scss
@@ -528,7 +528,7 @@ input[type="search"].cf-search-input-with-close {
 }
 
 .canvasWrapper {
-  background: $color-black;
+  background: transparent;
 }
 
 .cf-modal-scroll {
