--- a/app/views/queue/index.html.erb
+++ b/app/views/queue/index.html.erb
@@ -16,6 +16,7 @@
     hasCaseDetailsRole: current_user.roles.include?('Case Details'),
     userCanViewHearingSchedule: current_user.can_view_hearing_schedule?,
     userCanViewOvertimeStatus: current_user.can_view_overtime_status?,
+    userCanViewEditNodDate: current_user.can_view_edit_nod_date?,
     featureToggles: {
       schedule_veteran_virtual_hearing: FeatureToggle.enabled?(:schedule_veteran_virtual_hearing, user: current_user),
       special_issues_revamp: FeatureToggle.enabled?(:special_issues_revamp, user: current_user),
