--- a/app/views/queue/index.html.erb
+++ b/app/views/queue/index.html.erb
@@ -22,7 +22,8 @@
       special_issues_revamp: FeatureToggle.enabled?(:special_issues_revamp, user: current_user),
       overtime_revamp: FeatureToggle.enabled?(:overtime_revamp, user: current_user),
       cavc_remand: FeatureToggle.enabled?(:cavc_remand, user: current_user),
-      editNodDate: FeatureToggle.enabled?(:edit_nod_date, user: current_user)
+      editNodDate: FeatureToggle.enabled?(:edit_nod_date, user: current_user),
+      fnod_badge: FeatureToggle.enabled?(:fnod_badge, user: current_user)
     }
   }) %>
 <% end %>
