--- a/app/views/appeals/edit.html.erb
+++ b/app/views/appeals/edit.html.erb
@@ -13,8 +13,7 @@
       correctClaimReviews: FeatureToggle.enabled?(:correct_claim_reviews, user: current_user),
       unidentifiedIssueDecisionDate: FeatureToggle.enabled?(:unidentified_issue_decision_date, user: current_user),
       verifyUnidentifiedIssue: FeatureToggle.enabled?(:verify_unidentified_issue, user: current_user),
-      covidTimelinessExemption: FeatureToggle.enabled?(:covid_timeliness_exemption, user: current_user),
-      deceasedAppellants: FeatureToggle.enabled?(:deceased_appellants, user: current_user)
+      covidTimelinessExemption: FeatureToggle.enabled?(:covid_timeliness_exemption, user: current_user)
     }
   }) %>
 <% end %>
