Added comment and removed unused code

--- a/client/app/styles/reader/_reviewer.scss
+++ b/client/app/styles/reader/_reviewer.scss
@@ -416,6 +416,7 @@
   overflow: hidden;
   line-height: 1;
 
+  // Needed to correctly render the Text Layer
   span {
     position: absolute;
     color: transparent;
