--- a/client/app/styles/_commons.scss
+++ b/client/app/styles/_commons.scss
@@ -882,6 +882,7 @@ input {
   color: $color-gray;
   font-style: italic;
   margin-left: 1em;
+  float: right;
 }
 
 fieldset {
@@ -894,7 +895,6 @@ fieldset {
 
 * + .cf-form-textinput {
   @include clearfix;
-  margin-top: rem(20px);
   margin-bottom: rem(20px);
   color: $color-gray-dark;
 }
