add line about learning more about VH

--- a/app/views/virtual_hearing_mailer/sections/_test_your_connection.html.erb
+++ b/app/views/virtual_hearing_mailer/sections/_test_your_connection.html.erb
@@ -24,3 +24,6 @@
     no application download is required. The hearing will launch automatically in your web browser after you click the link.
   </li>
 </ul>
+<p>
+  Want to learn more about Virtual Tele-hearings? Watch this video at <%= external_link "https://www.youtube.com/watch?v=UDI3C_ytJt8" %>.
+</p>
