--- a/app/views/hearings/index.html.erb
+++ b/app/views/hearings/index.html.erb
@@ -17,6 +17,7 @@
   userUseFullPageVideoToVirtual: FeatureToggle.enabled?(:full_page_video_to_virtual, user: current_user),
   userCanScheduleVirtualHearings: FeatureToggle.enabled?(:schedule_virtual_hearings, user: current_user),
   userCanConvertCentralHearings: FeatureToggle.enabled?(:schedule_virtual_hearings_for_central, user: current_user),
+  userCanAddVirtualHearingDays: FeatureToggle.enabled?(:national_vh_queue, user: current_user),
   userCanAssignHearingSchedule: current_user.can_assign_hearing_schedule?,
   userCanBuildHearingSchedule: current_user.can?('Build HearSched'),
   userCanViewHearingSchedule: current_user.can_view_hearing_schedule?,
