--- a/app/views/virtual_hearing_mailer/sections/_test_your_connection.html.erb
+++ b/app/views/virtual_hearing_mailer/sections/_test_your_connection.html.erb
@@ -13,7 +13,7 @@
   you plan to use for your hearing</strong>: <%= external_link @test_link %>
 </p>
 <% end %>
-<% if @virtual_hearing&.use_vc_test_link? %>
+<% if !@virtual_hearing&.use_vc_test_link? %>
 <ul>
   <li>
     If you are using an Apple mobile device, such as an iPhone or iPad, you
