--- a/app/views/queue/index.html.erb
+++ b/app/views/queue/index.html.erb
@@ -19,6 +19,7 @@
     userCanViewOvertimeStatus: current_user.can_view_overtime_status?,
     userCanViewEditNodDate: current_user.can_view_edit_nod_date?,
     featureToggles: {
+      enable_hearing_time_slots: FeatureToggle.enabled?(:enable_hearing_time_slots, user: current_user),
       schedule_veteran_virtual_hearing: FeatureToggle.enabled?(:schedule_veteran_virtual_hearing, user: current_user),
       special_issues_revamp: FeatureToggle.enabled?(:special_issues_revamp, user: current_user),
       overtime_revamp: FeatureToggle.enabled?(:overtime_revamp, user: current_user),
