Started writing unit tests for the hearing time slots algorithm

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -359,6 +359,10 @@
 .time-slot-button-selected.usa-button {
   background-color: $color-primary-darker;
   color: $color-white;
+
+  &:hover {
+    color: $color-white;
+  }
 }
 
 .time-slot-button-full.usa-button {
