--- a/client/app/styles/react/_select-dropdown.scss
+++ b/client/app/styles/react/_select-dropdown.scss
@@ -80,6 +80,8 @@ $cf-select-text-color: #323a45;
   }
 
   .usa-input-error & {
+    border: 3px solid $color-secondary-dark;
+
     .cf-select--is-disabled {
       input { width: 1px; }
     }
