Shalliburton/caseflow 956 combine time slot endpoint (#15961)
Resolves [CASEFLOW-956](https://vajira.max.gov/browse/CASEFLOW-956)

### Description
Combines the frontend and backend work behind a feature toggle for adding the time slot buttons

### Acceptance Criteria
- [ ] Combine work in new PR
  - [ ] make request to endpoint written in https://vajira.max.gov/browse/CASEFLOW-954
  - [ ] store data in redux for the hearing day
  - [ ] fetch data from redux for the hearing day if already stored
- [ ] Write feature tests
  - [ ] test for legacy and ama 

### Testing Plan
1. Shadow user `BVASYELLOW`: http://localhost:3000/test/users
2. Navigate to the hearings app and click "Schedule Veterans"
3. Search for "St. Petersburg FL" in the list and choose one of the veterans in the AMA waiting tab
4. Click the "Schedule Veteran" button from the dropdown
5. Ensure that you are still able to schedule a veteran with the existing radio buttons
6. On the rails console, enable the feature flag: `FeatureToggle.enable!(:enable_hearing_time_slots)`
7. Repeat steps 2 - 5
8. Ensure that this time you see the new time slot options

### User Facing Changes
 - [x] Screenshots of UI changes added to PR & Original Issue

 BEFORE|AFTER
 ---|---
-- |<img width="1920" alt="TimeSlotUnselected" src="https://user-images.githubusercontent.com/61989526/109878760-8c0b8280-7c29-11eb-97b1-3d25b7c6b246.png">
-- | <img width="1220" alt="TimeSlotFilled" src="https://user-images.githubusercontent.com/61989526/109878778-9168cd00-7c29-11eb-9e98-acc9a02ff6ac.png">
-- | <img width="1257" alt="TimeSlotCustom" src="https://user-images.githubusercontent.com/61989526/109878792-975eae00-7c29-11eb-83d8-439a963dc6a0.png">

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -345,9 +345,10 @@
 }
 
 .time-slot-button {
-  height: 60px;
-  width: 325px;
+  height: 75px;
+  width: 350px;
   text-align: left;
+  padding-left: 25px;
 
   > div:first-child {
     display: flex;
@@ -379,13 +380,25 @@
 .time-slot-details {
   font-weight: 400;
   font-size: medium;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 295px;
+  margin-top: 5px;
 }
 
-.time-slot-container.usa-width-one-third {
+.time-slot-button-container {
   display: flex;
-  height: 350px;
+  width: 800px;
+}
+
+.time-slot-container {
+  flex: 0;
+  max-width: 46rem;
+  display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  line-height: normal;
 
   > span {
     margin: 5px;
