--- a/app/views/export/show.html.erb
+++ b/app/views/export/show.html.erb
@@ -6,7 +6,18 @@
       <li><code><%= link_to('show_pii', {action: 'show', show_pii: ""}) %></code>: shows PII in the Intake section</li>
       <li><code><%= link_to('fields=id,status,updated_at', {action: 'show', fields: "id,status,updated_at"}) %></code>: custom fields to show in the Task tree section</li>
     </ul>
-    <%= treee_help_text %>
+    <div id="treeefields" style="width: 200px; height: 300px; overflow-y: scroll; padding:10px">
+      <% available_fields.each do |field_name| %>
+        <% if treee_fields.include?(field_name.to_sym) %>
+          <input type="checkbox" name="<%=field_name%>" id="<%=field_name%>" checked />
+        <% else %>
+          <input type="checkbox" name="<%=field_name%>" id="<%=field_name%>" />
+        <% end %>
+        <label for="<%=field_name%>"><%=field_name%></label>
+      <% end %>
+    </div>
+    <p/><a id="task_tree_link" href="">Update task tree</a>
+
     <p/>Other formats:
     <%= link_to('text', {action: 'show', format: "text"}) %>, 
     <%= link_to('json', {action: 'show', format: "json"}) %>
@@ -32,4 +43,15 @@
   </code>
   <pre><code><%= intake_as_text %></code></pre>
   <hr/>
+
+  <%= javascript_include_tag 'task-tree' %>
+  <script type="text/javascript">
+    $('#treeefields input').change(function(){
+      var selected = [];
+      $('#treeefields input:checked').each(function() {
+          selected.push($(this).attr('name'));
+      });
+      $('#task_tree_link').attr("href", window.location.href.split('?')[0]+"?fields="+selected.join(','));
+    });
+  </script>
 </div>
