--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -340,9 +340,7 @@
   }
 }
 
-/*
- * Time Slot Styles
- */
+// Time Slot Styles
 .time-slot-label {
   font-weight: bold;
 }
@@ -412,26 +410,24 @@
   padding-left: 0;
 }
 
-/*
- * Appeal Information Styles
- */
- .schedule-veteran-appeals-info {
-   width: 100%;
-   background-color: $color-gray-lightest;
-   border: 2px solid $color-gray-lighter;
-   border-radius: 2%;
-   padding: 25px 20px;
-   max-width: 300px;
-   position: fixed;
- }
+// Appeal Information Styles
+.schedule-veteran-appeals-info {
+  width: 100%;
+  background-color: $color-gray-lightest;
+  border: 2px solid $color-gray-lighter;
+  border-radius: 2%;
+  padding: 25px 20px;
+  max-width: 300px;
+  position: fixed;
+}
 
- .usa-width-one-fourth.schedule-veteran-appeal-info-container {
-   margin-right: 30px;
-   position: relative;
-   width: 300px;
-   height: 400px;
+.usa-width-one-fourth.schedule-veteran-appeal-info-container {
+  margin-right: 30px;
+  position: relative;
+  width: 300px;
+  height: 400px;
 
-   h2 {
-     margin-bottom: 10px;
-   }
- }
+  h2 {
+    margin-bottom: 10px;
+  }
+}
