--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -428,6 +428,13 @@
   }
 }
 
+.schedule-veteran-appeals-info-stream {
+
+  pre {
+    color: $color-blue;
+  }
+}
+
 .usa-width-one-fourth.schedule-veteran-appeal-info-container {
   margin-right: 30px;
   position: relative;
