Fixed overlap of appeal information when form is empty

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -340,6 +340,11 @@
   }
 }
 
+// Schedule Veteran Styles
+.schedule-veteran-page {
+  min-height: 650px;
+}
+
 // Time Slot Styles
 .time-slot-label {
   font-weight: bold;
