--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -425,7 +425,7 @@
   max-width: 300px;
 
   pre {
-    white-space: pre-wrap;
+    white-space: normal;
     word-wrap: break-word;
     width: 200px;
   }
