Modified heading structure to be more accurately read by screenreaders

--- a/client/app/styles/_commons.scss
+++ b/client/app/styles/_commons.scss
@@ -605,6 +605,7 @@ svg title {
 .cf-logo {
   color: $color-gray-dark;
   font-size: 1.7rem;
+  font-weight: 900;
   display: inline;
 
   &:hover {
