--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
             <div class="cf-app-width">
               <div class="cf-push-left">
                 <div class="cf-push-left">
-                  <h1 class="cf-logo <%= logo_class %>">
+                  <p class="cf-logo <%= logo_class %>">
                     <a id="cf-logo-link" href="<%= logo_path %>">
                       Caseflow <span class="cf-logo-name"><%= logo_name %></span>
                     </a>
-                  </h1>
+                  </p>
                   <h2 id="page-title" class="cf-application-title"><%= yield :page_title %></h2>
                 </div>
               </div>
