Modified heading structure to be more accurately read by screenreaders

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
                       Caseflow <span class="cf-logo-name"><%= logo_name %></span>
                     </a>
                   </p>
-                  <h2 id="page-title" class="cf-application-title"><%= yield :page_title %></h2>
+                  <p id="page-title" class="cf-application-title"><%= yield :page_title %></p>
                 </div>
               </div>
               <div class="cf-push-right">
