Shalliburton/caseflow 394 add post remand appeal info (#16076)
* Added source remand appeal link to appeal information

* Updated judge name for CAVC appeals

* Added tests for cavc remand appeals info

* Updated snapshots

* Update app/models/serializers/work_queue/appeal_serializer.rb

Co-authored-by: Rubaiyat Rashid <Rubaiyat.Rashid@va.gov>

* Update app/models/serializers/work_queue/appeal_serializer.rb

Co-authored-by: Tomas Apodaca <Thomas.Apodaca@va.gov>

Co-authored-by: Stephen Halliburton <stephen.halliburton@va.gov>
Co-authored-by: Rubaiyat Rashid <Rubaiyat.Rashid@va.gov>
Co-authored-by: Tomas Apodaca <Thomas.Apodaca@va.gov>

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -342,7 +342,7 @@
 
 // Schedule Veteran Styles
 .schedule-veteran-page {
-  min-height: 650px;
+  min-height: 680px;
 }
 
 // Time Slot Styles
@@ -427,6 +427,13 @@
   pre {
     white-space: normal;
     word-wrap: break-word;
+    width: 200px;
+  }
+
+  a > div {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
     width: 200px;
   }
 }
